Fix Nabvar view on iphones with notch (#46)

--- a/energylink-connect2-app/src/components/Footer/footer.scss
+++ b/energylink-connect2-app/src/components/Footer/footer.scss
@@ -1,6 +1,6 @@
 .custom-footer {
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   width: 100vw;
   height: 70px;
 }
