--- a/energylink-connect2-app/src/hocs/layout.scss
+++ b/energylink-connect2-app/src/hocs/layout.scss
@@ -1,16 +1,25 @@
 .custom-layout {
   position: absolute;
   width: 100vw;
-  .fill-parent{
+  .fill-parent {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
   }
 }
 .with-footer {
-  height: calc(100vh - 150px);
+  height: calc(100vh - 170px);
   overflow-y: auto;
+
+  margin-bottom: constant(safe-area-inset-bottom); /* iOS 11.0 */
+  margin-bottom: env(safe-area-inset-bottom); /* iOS 11.2 */
 }
 .without-footer {
-  height: calc(100vh - 130px);
+  height: calc(100vh - 150px);
+}
+
+body {
+  padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
+  padding-top: env(safe-area-inset-top); /* iOS 11.2 */
+  padding-bottom: env(safe-area-inset-bottom);
 }
