--- a/energylink-connect2-app/src/pages/NotFound/NotFound.scss
+++ b/energylink-connect2-app/src/pages/NotFound/NotFound.scss
@@ -6,8 +6,4 @@
   & > .logo-container {
     margin: auto;
   }
-
-  & + .section {
-    height: calc(100vh - 70px);
-  }
 }
